# robomaster2

./: .gitignore  .gitmodules  README.md
.github/workflows/: build.yaml  build_eol.yaml  lint.yaml
dr16_node/: package.xml
dr16_node/include/dr16_node/: dr16_node.hpp
dr16_node/launch/: dr16_node.launch.py
dr16_node/src/: dr16_node.cc
rm2_referee/: README.md
rm2_referee/referee_node/: CMakeLists.txt  package.xml
rm2_referee/referee_node/config/: settings.yaml
rm2_referee/referee_node/include/referee_node/: crc.hpp  decoder.hpp  misc.hpp  referee_node.hpp  thread_pool.hpp
rm2_referee/referee_node/launch/: referee_node.launch.py
rm2_referee/referee_node/libs/: CMakeLists.txt
rm2_referee/referee_node/src/: crc.cc  decoder.cc  referee_node.cc
rm2_referee/rm2_referee_msgs/: CMakeLists.txt  package.xml
rm2_referee/rm2_referee_msgs/msg/fpv_channel/: RemoteControl.msg
rm2_referee/rm2_referee_msgs/msg/normal_channel/: AirSupportData.msg  Buff.msg  ExtSupplyProjectileAction.msg  GameRobotHP.msg  GroundRobotPosition.msg  MapCommand.msg  PowerHeatData.msg  ProjectileAllowance.msg  RFIDStatus.msg  RadarMarkData.msg  RobotStatus.msg  SentryInfo.msg
rm2_referee/rm2_referee_msgs/srv/: Tx.srv
rm2_remote/: CMakeLists.txt  README.md  package.xml
rm2_remote/dr16_node/: CMakeLists.txt  README.md  package.xml
rm2_remote/dr16_node/config/: settings.yaml
rm2_remote/dr16_node/include/dr16_node/: dr16_node.hpp
rm2_remote/dr16_node/src/: dr16_node.cc
rm2_remote/include/: dji_dr16.hpp
rm2_remote/src/: dji_dr16.cc
